--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "eslint:recommended",
     "env": {
         "browser": true,
-        "es6": true
+        "es2021":true,
+        "node":true
     },
     "rules": {
         "arrow-body-style": "error",
