enable constant condition

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "arrow-parens": "error",
         "arrow-spacing": "error",
         "generator-star-spacing": "error",
+        "no-constant-condition":["error", {"checkLoops": false}],
         "no-duplicate-imports": "error",
         "no-useless-computed-key": "error",
         "no-useless-constructor": "error",
