--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,16 +60,16 @@ bind | split-window -h
 bind - split-window -v
 # コピーモードを設定する
 # コピーモードでvimキーバインドを使う
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
 # 'v' で選択を始める
-bind -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 # 'V' で行選択
-bind -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi V send-keys -X select-line
 # 'C-v' で矩形選択
-bind -T copy-mode-vi C-v send -X rectangle-toggle
-# 'y' でヤンク
-bind -T copy-mode-vi y send -X copy-selection
-# 'Y' で行ヤンク
-bind -T copy-mode-vi Y send -X copy-line
-# 'C-p'でペースト
-bind-key C-p paste-buffer
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# 'y' or Enterでクリップボードにコピー
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
