set color of status bar and border

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,9 +39,11 @@ set-option -g status-interval 1
 # センタライズ(Window番号等)
 set-option -g status-justify centre
 # ステータスバーの色
-# set-option -g status-bg "colour238"
+set-option -g status-bg colour238
 # Status Lineの文字色
-# set-option -g status-fg "colour255"
+set-option -g status-fg colour251
+
+set -g pane-active-border-style fg=colour111,bg=default
 
 # VIM-RELATED
 # vimのキーバインドでペイン間移動を可能にする
