--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,5 +73,8 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+# Swap pane
+bind -r C-H swap-pane -s '{left-of}'
+bind -r C-L swap-pane -s '{right-of}'
+bind -r C-K swap-pane -s '{up-of}'
+bind -r C-J swap-pane -s '{down-of}'
